discussion/kv_engine/176433/176433_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make range-scan parameters runtime configurable

Add "set" paths for changing the runtime value of

* range_scan_max_continue_tasks
* range_scan_max_lifetime
* range_scan_read_buffer_send_size

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-21 11:16:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-21 12:55:39.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46918/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(836): error C2039: "setRangeScanMaxLifetime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46918/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18190/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:836:27: error: no member named "setRangeScanMaxLifetime" in "Configuration" [clang-diagnostic-error]
            configuration.setRangeScanMaxLifetime(std::stoull(val));
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:842:31: error: no member named "setRangeScanMaxContinueTasks" in "Configuration" [clang-diagnostic-error]
                configuration.setRangeScanMaxContinueTasks(std::stoull(val));
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18190/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39418/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39418/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7954/ : FAILURE

Compile error at [2022-06-21T11:21:52.489Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7954/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19263/ : FAILURE

Compile error at [2022-06-21T11:33:15.496Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19263/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7851/ : FAILURE

Compile error at [2022-06-21T12:27:27.498Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20048/ : FAILURE

Compile error at [2022-06-21T12:30:51.982Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20393/ : FAILURE

Compile error at [2022-06-21T12:32:12.298Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21041/ : FAILURE

Compile error at [2022-06-21T12:34:15.466Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21041/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28428/ : FAILURE

Compile error at [2022-06-21T12:54:58.065Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:836:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28428/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17310/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
